<resources>
    <string name="app_name">ls-task</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="signUp_text">Don’t have an account? </string>
    <string name="signIn_text">Have an account? </string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="roll">Roll</string>
</resources>
