<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="fill_parent"
android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEmployee">

    <ImageView
        android:id="@+id/backButtonId"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="357dp"
        android:background="@drawable/outline_arrow_back_ios_black_24pt_3x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/outline_arrow_back_ios_black_24pt_3x" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/heebo_bold"
        android:text="Add Employees"
        android:textColor="#000000"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButtonId" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/first_name"
        android:textColorHint="#8F9BB3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#EDF1F7"
            android:fontFamily="@font/heebo"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="#8F9BB3"
            android:textCursorDrawable="@null"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/last_name"
        android:textColorHint="#8F9BB3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameLayoutId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#EDF1F7"
            android:fontFamily="@font/heebo"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="#8F9BB3"
            android:textCursorDrawable="@null"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/address"
        android:textColorHint="#8F9BB3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameLayoutId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#EDF1F7"
            android:fontFamily="@font/heebo"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="#8F9BB3"
            android:textCursorDrawable="@null"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/phone"
        android:textColorHint="#8F9BB3"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressLayoutId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#EDF1F7"
            android:fontFamily="@font/heebo"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="#8F9BB3"
            android:textCursorDrawable="@null"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rollLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/roll"
        android:textColorHint="#8F9BB3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneLayoutId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rollId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#EDF1F7"
            android:fontFamily="@font/heebo"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="#8F9BB3"
            android:textCursorDrawable="@null"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="#577BF9"
        android:backgroundTint="#80577BF9"
        android:enabled="false"
        android:text="Add"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollLayoutId" />



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>