<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_header_selector"
        tools:context=".SignUp">


        <TextView
            android:id="@+id/signUpTextId"
            android:layout_width="127dp"
            android:layout_height="51dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="121dp"
            android:layout_marginEnd="373dp"
            android:layout_marginBottom="170dp"
            android:fontFamily="@font/heebo_bold"
            android:text="Sign Up"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/emailLayoutId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/personalDetailsId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="184dp"
            android:layout_marginEnd="12dp"
            android:text="Personal Details"
            app:layout_constraintEnd_toStartOf="@+id/firstNameLayoutId"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpTextId" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameLayoutId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/first_name"
            android:textColorHint="#8F9BB3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personalDetailsId">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstNameId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#EDF1F7"
                android:fontFamily="@font/heebo"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="#8F9BB3"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameLayoutId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/last_name"
            android:textColorHint="#8F9BB3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameLayoutId">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastNameId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#EDF1F7"
                android:fontFamily="@font/heebo"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="#8F9BB3"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayoutId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/email"
            android:textColorHint="#8F9BB3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameLayoutId">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#EDF1F7"
                android:fontFamily="@font/heebo"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="#8F9BB3"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signUpId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:background="#577BF9"
            android:backgroundTint="#80577BF9"
            android:enabled="false"
            android:text="Sign Up"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verifiedPasswordLayoutId" />

        <TextView
            android:id="@+id/passwordTextId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailLayoutId" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayoutId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/password"
            android:textColorHint="#8F9BB3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextId">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#EDF1F7"
                android:fontFamily="@font/heebo"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#8F9BB3"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/verifiedPasswordLayoutId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/password"
            android:textColorHint="#8F9BB3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayoutId">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/verifiedPasswordId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#EDF1F7"
                android:fontFamily="@font/heebo"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#8F9BB3"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/linkToSignInId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:linksClickable="true"
            android:text="sign in"
            android:textColor="#577BF9"
            android:textColorLink="#577BF9"
            app:layout_constraintStart_toEndOf="@+id/signInTextId"
            app:layout_constraintTop_toBottomOf="@+id/signUpId" />

        <TextView
            android:id="@+id/signInTextId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/signIn_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linkToSignInId"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpId"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>